# stella-typechecker

./: .gitignore  CMakeLists.txt  README.md  example.stella  format.sh  rm.sh  run.sh  run_deb.sh  run_example.sh
src/: Context.h  Eval.cpp  Eval.h  Interpret.cpp  TypeCheck.cpp  TypeCheck.h  VisitTypeCheck.cpp  VisitTypeCheck.h
tests/ill-typed/: ambiguous-list-type-isempty.stella  bad-let-1.stella  bad-let-2.stella  bad-let-3.stella  bad-let-4.stella  bad-let-5.stella  bad-let-7.stella  bad-lists-1.stella  bad-lists-2.stella  bad-records-10.stella  bad-records-11.stella  bad-records-12.stella  bad-records-14.stella  bad-records-15.stella  bad-records-16.stella  bad-records-17.stella  bad-records-18.stella  bad-records-19.stella  bad-records-20.stella  bad-records-21.stella  bad-records-4.stella  bad-records-5.stella  bad-records-7.stella  bad-records-8.stella  bad-records-9.stella  bad-sum-types-10.stella  bad-sum-types-11.stella  bad-sum-types-12.stella  bad-sum-types-3.stella  bad-sum-types-5.stella  bad-sum-types-7.stella  bad-sum-types-8.stella  bad-sum-types-9.stella  bad-tuples-2.stella  bad-tuples-3.stella  funcxxx.stella  not-a-list-head.stella  not-a-list-isempty.stella  not-a-list-tail.stella  not-a-reference-1.stella  (+14 more)
tests/well-typed/: empty-list.stella  lists-1.stella  lists-2.stella  lists-3.stella  panic.stella  records-1.stella  records-2.stella  records-4.stella  records-5.stella  records-6.stella  records-7.stella  records-8.stella  refs-1.stella  refs-2.stella  sum-types-1.stella  sum-types-2.stella  sum-types-3.stella  tuples-1.stella
